# tiny-projects-mlops

tp1/app/: README.md  main.py  regression.joblib
tp2/: test.py  train.py
tp2/app/: main.py  requirements.txt
tp2/mlartifacts/0/65300ef61c6847ba969e03dea4cb0a5b/artifacts/: estimator.html
tp2/mlartifacts/0/6b0f4ac76d5d4384ba4283b09659b1ab/artifacts/: estimator.html
tp2/mlartifacts/0/b9dbd250e5394b25b76229d34eb80dda/artifacts/: estimator.html
tp2/mlruns/0/: meta.yaml
tp2/mlruns/0/0178d5fbc31141658a0a4972968e3304/: meta.yaml
tp2/mlruns/0/408f0c0f0e32439d99ed91d5aa5cc6c3/: meta.yaml
tp2/mlruns/0/630bde7d8bf549ecbec51786cf8ea2cf/: meta.yaml
tp2/mlruns/0/65300ef61c6847ba969e03dea4cb0a5b/: meta.yaml
tp2/mlruns/0/6b0f4ac76d5d4384ba4283b09659b1ab/: meta.yaml
tp2/mlruns/0/989e57d9c3e24a81b21c067d43eea11b/: meta.yaml
tp2/mlruns/0/b9dbd250e5394b25b76229d34eb80dda/: meta.yaml
tp2/mlruns/0/ce0b308350b841e99f5bc08a41edf52a/: meta.yaml
tp2/mlruns/models/IrisModel/: meta.yaml
tp2/mlruns/models/IrisModel/version-1/: meta.yaml
tp3/: README.md  consumme1.py  consumme2.py  process_and_resend.py  produce1.py  produce2.py
tp4/: 2025_Drift_model_and_retraining.ipynb  pyproject.toml
tp4/output/: house.html  house2.html
tp5/: transpile_simple_model.py
tp6/fpga/and_gate/: test.vcd
tp6/fpga/linear_regression/: reg.v  script.sh  test_reg.v
tp6/fpga/one_bit_add/: one_bit.v  test_one_bit.v
tp6/fpga/or_gate/: or_gate.v
tp6/fpga/sixteen_bit_add/: sixteen_bit_add.v  test_sixteen_bit.v
tp6/fpga/sixteen_bit_mul/: sixteen_bit_mul.v  test_sixteen_bit.v
(+93 files in other folders)
