[project]
name = "mini-projet-mlops-4"
version = "0.0.1"
requires-python = "==3.10.*"
dependencies = [
    "scikit-learn==1.3.2",
    "alibi-detect==0.12.0",
    "eurybia==1.3.3",
    "tensorflow-cpu==2.8.4",
    "keras==2.8.0",
    "notebook>=7.4.7",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "ipywidgets>=8.1.7",
]

[tool.uv]
required-environments = ["sys_platform == 'win32'"]
